<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/body_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Course Description-->

        <TextView
            android:id="@+id/course_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/course_description_example"/>

        <!--Corequistes-->

        <TextView
            android:id="@+id/corequistes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/corequistes_example"/>

        <!--Prerequisites-->

        <TextView
            android:id="@+id/prerequisites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/prerequisites_example"/>

        <!--Course Rotation-->

        <TextView
            android:id="@+id/course_rotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/course_rotation_example"/>

        <!--Required Materials-->

        <TextView
            android:id="@+id/required_materials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/required_materials_example"/>

        <!--Schedule Type-->

        <TextView
            android:id="@+id/schedule_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/schedule_type_example"/>

        <!--Attributes-->

        <TextView
            android:id="@+id/attributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/attributes_example"/>

        <!--Fees-->

        <TextView
            android:id="@+id/fees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/fees_example"/>

        <!--Room Assignment-->

        <TextView
            android:id="@+id/room_assignment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/room_assignment_example"/>

        <!--Date-->

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/date_example"/>

        <!--School-->

        <TextView
            android:id="@+id/school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/school_example"/>

        <!--Section Comments-->

        <TextView
            android:id="@+id/section_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_body_text_style"
            android:text="@string/section_comment_example"/>

    </LinearLayout>

</ScrollView>