<?xml version="1.0" encoding="utf-8"?>

<!--Course Recycler View Cell/Row | FIXME: - Create Style in style.xml to use with android:textAppearance | Play with negative margins-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:alpha=".80">


    <!--Subject (CS) & Course Number (121) | FIXME: - Spannable String Subject in gold, Course Number in white-->

    <TextView
        android:id="@+id/subject_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title_style"
        android:layout_marginTop="8dp"
        android:text="@string/course_label_hint"/>

    <!--Save Button | FIXME: - CREATE CUSTOM SAVE BUTTON VIA EXTENDING TEXTVIEW CLASS -->

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/subject_course"
        android:layout_alignBaseline="@id/subject_course"
        android:text="☆"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!-- Course Title -->

    <TextView
        android:id="@+id/course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subtitle_style"
        android:layout_marginTop="-10dp"
        android:layout_below="@id/subject_course"
        android:text="@string/course_title"
        />

    <!--Custom Week View | FIXME: - Create a Custom View (Maybe Extend Spannable Text or TextView?) -->

    <TextView
        android:id="@+id/week_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/subject_course"
        android:text="M T W Th F S Su"
        android:fontFamily="@font/brandon_light"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:alpha=".25"
        />

    <!--Credits-->

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/start_text_style"
        android:layout_below="@id/course_title"
        android:text="@string/_4_credits" />

    <!--Seats Left-->

    <TextView
        android:id="@+id/seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/start_text_style"
        android:layout_below="@id/credits"
        android:text="@string/seats_left" />

    <!--Instructor-->

    <TextView
        android:id="@+id/instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/start_text_style"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/seats"
        android:text="@string/instructor" />

    <!--Time-->

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/end_text_style"
        android:layout_below="@id/week_view"
        android:text="@string/time" />

    <!--Course Register Number-->

    <TextView
        android:id="@+id/crn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/end_text_style"
        android:layout_below="@id/time"
        android:text="@string/crn" />

    <!--Campus-->

    <TextView
        android:id="@+id/campus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/end_text_style"
        android:textColor="@color/pace_gold"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/crn"
        android:text="@string/campus"/>

</RelativeLayout>
