<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jevon.settersaturn.CourseSearchActivity"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <!--Required Label-->

        <TextView
            android:id="@+id/required_search_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/search_title_style"
            android:text="@string/required" />

        <!--Term-->

        <LinearLayout
            android:id="@+id/term_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:layout_below="@id/required_search_label">

            <TextView
                android:id="@+id/term_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_label_text_style"
                android:text="@string/term_label" />

            <Spinner
                android:id="@+id/term_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/spinner_style">
            </Spinner>
        </LinearLayout>

        <!--Course Level-->

        <LinearLayout
            android:id="@+id/course_level_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:layout_below="@id/term_container">

            <TextView
                android:id="@+id/course_level_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_label_text_style"
                android:text="@string/course_level_label" />

            <Spinner
                android:id="@+id/course_level_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/spinner_style">
            </Spinner>
        </LinearLayout>

        <!--Subject-->

        <LinearLayout
            android:id="@+id/subject_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:layout_below="@id/course_level_container">

            <TextView
                android:id="@+id/subject_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_label_text_style"
                android:text="@string/subject_label" />

            <Spinner
                android:id="@+id/subject_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/spinner_style">
            </Spinner>
        </LinearLayout>

        <TextView
            android:id="@+id/optional_search_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/search_title_style"
            android:layout_below="@id/subject_container"
            android:text="@string/optional" />

        <!--Course Number-->

        <LinearLayout
            android:id="@+id/course_number_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:layout_below="@id/optional_search_label">

            <TextView
                android:id="@+id/course_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_label_text_style"
                android:text="@string/course_number_label" />

            <Spinner
                android:id="@+id/course_number_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/spinner_style">
            </Spinner>
        </LinearLayout>

        <!--Campus-->

        <LinearLayout
            android:id="@+id/campus_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_below="@id/course_number_container">

            <TextView
                android:id="@+id/campus_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_label_text_style"
                android:text="@string/campus_label"/>

            <Spinner
                android:id="@+id/campus_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/spinner_style">
            </Spinner>

        </LinearLayout>

        <!--Instructor-->

        <LinearLayout
            android:id="@+id/instructor_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_below="@id/campus_container">

            <TextView
                android:id="@+id/instructor_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_label_text_style"
                android:text="@string/instructor_label"/>

            <Spinner
                android:id="@+id/instructor_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/spinner_style">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/attributes_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_below="@id/instructor_container">

            <TextView
                android:id="@+id/attributes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_label_text_style"
                android:text="@string/attributes_label"/>

            <Spinner
                android:id="@+id/attributes_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/spinner_style">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/day_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_below="@id/attributes_container">

            <TextView
                android:id="@+id/day_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_label_text_style"
                android:text="@string/day_label"/>

            <Spinner
                android:id="@+id/day_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/spinner_style">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_below="@id/day_container">

            <TextView
                android:id="@+id/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_label_text_style"
                android:text="@string/time_label"/>

            <Spinner
                android:id="@+id/time_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/spinner_style">
            </Spinner>

        </LinearLayout>


    </RelativeLayout>

</ScrollView>